# HR-System-Backend

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
HR_System/: .env  .env.sample  asgi.py  settings.py  urls.py  views.py  wsgi.py
accounts/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20220105_1118.py  0002_remove_customuser_active_remove_customuser_mobile_and_more.py  0003_remove_branch_manager_branch_branch_manager_and_more.py  0004_remove_customuser_salary_currency_and_more.py  0005_alter_branch_city_alter_branch_country_and_more.py  0006_alter_branch_phone.py  0006_remove_customuser_joined_alter_branch_name_and_more.py  0007_alter_branch_name_alter_department_name.py  0007_alter_customuser_personal_picture.py  0008_customuser_marital_status.py  0008_remove_customuser_joined.py  0009_customuser_employee_id.py  0010_alter_branch_branch_manager_and_more.py  0010_leave_customuser_hours_remaining_and_more.py  0011_alter_customuser_annual_off_days_and_more.py  0011_alter_leave_name.py  0012_alter_customuser_employee_id_alter_customuser_gender_and_more.py  0012_alter_leave_branch_name.py  0013_alter_customuser_personal_picture.py  0013_rename_joined_leave_date.py  0014_alter_customuser_personal_picture.py  0015_alter_customuser_personal_picture.py  0016_alter_customuser_phone.py  0017_alter_customuser_phone.py  0018_remove_leave_branch_name_remove_leave_name.py  0019_leave_branch_name_leave_name.py
