[tool.poetry]
name = "hr-system-backend"
version = "0.1.0"
description = ""
authors = ["Mohammad Abdul Ghafour <mohammad1478971539@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.1.7"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.0.0"
django-cors-headers = "^3.10.1"
django-environ = "^0.8.1"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
flake8 = "^4.0.1"
requests = "^2.27.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flack = "^1.3.7"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
